--- a/Cryptocurrencies/App.xaml
+++ b/Cryptocurrencies/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Cryptocurrencies"
+             xmlns:viewModel="clr-namespace:Cryptocurrencies.MVVM.ViewModel"
+             xmlns:view="clr-namespace:Cryptocurrencies.MVVM.View"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +11,14 @@
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/SearchBlockTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:InfoViewModel}">
+                <view:Information />
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
