--- a/Cryptocurrencies/MainWindow.xaml
+++ b/Cryptocurrencies/MainWindow.xaml
@@ -3,10 +3,74 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Cryptocurrencies"
+        xmlns:viewModal="clr-namespace:Cryptocurrencies.MVVM.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="600" Width="920"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="Transparent"
+        AllowsTransparency="True">
+    
+    <Window.DataContext>
+        <viewModal:MainViewModel />
+    </Window.DataContext>
+    
+    <Border
+        Background="#272537"
+        CornerRadius="10">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-    </Grid>
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Text="Cryptocurrencies"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Left"
+                       Margin="20,0,0,0"
+                       FontSize="22"
+                       Foreground="White">
+            </TextBlock>
+            <StackPanel Grid.Row="1" Grid.Column="0">
+                <RadioButton
+                    Content="Home"
+                    Height="50"
+                    Foreground="White"
+                    FontSize="14"
+                    IsChecked="True"
+                    Command="{Binding HomeViewCommand}"
+                    Style="{StaticResource MenuButtonTheme}" />
+
+                <RadioButton
+                    Content="Info"
+                    Height="50"
+                    Foreground="White"
+                    FontSize="14"
+                    Command="{Binding InfoViewCommand}"
+                    Style="{StaticResource MenuButtonTheme}" />
+                
+            </StackPanel>
+
+            <TextBox Grid.Row="0" Grid.Column="1"
+                     Height="40"
+                     VerticalAlignment="Center"
+                     HorizontalAlignment="Left"
+                     Margin="5"
+                     Style="{StaticResource  SearchBoxTheme}">
+            </TextBox>
+
+            <ContentControl Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="10"
+                            Content="{Binding CurrentView}">
+            </ContentControl>
+        </Grid>
+
+
+    </Border>
 </Window>
