--- a/Cryptocurrencies/App.xaml
+++ b/Cryptocurrencies/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/SearchBlockTheme.xaml" />
+                <ResourceDictionary Source="Theme/CurrenciesListTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
