Add a "close", "roll up" and "minimize" buttons, also a small refactoring

--- a/Cryptocurrencies/App.xaml
+++ b/Cryptocurrencies/App.xaml
@@ -8,6 +8,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/TransparentButtonStyle.xaml"/>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/SearchBlockTheme.xaml" />
                 <ResourceDictionary Source="Theme/CurrenciesListTheme.xaml" />
