--- a/Cryptocurrencies/Theme/CurrenciesListTheme.xaml
+++ b/Cryptocurrencies/Theme/CurrenciesListTheme.xaml
@@ -1,8 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:core="clr-namespace:Cryptocurrencies.Core">
+                    xmlns:core="clr-namespace:Cryptocurrencies.Core"
+                    xmlns:helpers="clr-namespace:Cryptocurrencies.Helpers">
 
-    <core:ChangePercentColorConverter x:Key="ChangePercentColorConverter" />
+    <helpers:ChangePercentColorConverter x:Key="ChangePercentColorConverter" />
 
     <Style TargetType="ListView" x:Key="CurrenciesListStyle">
         <Setter Property="Foreground" Value="White" />
