--- a/Cryptocurrencies/MVVM/View/InformationView.xaml
+++ b/Cryptocurrencies/MVVM/View/InformationView.xaml
@@ -3,10 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Cryptocurrencies.MVVM.View"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="350" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="QQQQQQQQQQQQQQQQQq"></TextBlock>
+        <TextBlock Text="Sorry, this crypto not found"
+                   Foreground="Red"
+                   FontSize="16"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Visibility="{Binding SelectedCryptocurrency, Converter={StaticResource NullToVisibilityConverter}}" />
+
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="{Binding SelectedCryptocurrency.Name}" />
+            <TextBlock Text="{Binding SelectedCryptocurrency.PriceUsd}" />
+            <TextBlock Text="{Binding SelectedCryptocurrency.ChangePercent24Hr}" />
+        </StackPanel>
     </Grid>
 </UserControl>
